--- a/src/main/resources/templates/filmes/formulario.html
+++ b/src/main/resources/templates/filmes/formulario.html
@@ -7,5 +7,20 @@
 </head>
 <body>
     <h1>Cadastro de Filmes</h1>
+    <form method="post">
+        <label for="nome">Nome:</label>
+        <input id="nome" name="nome">
+        </br>   
+        <label for="duracao">Duração (em minutos):</label>
+        <input id="duracao" name="duracao">
+        </br>   
+        <label for="ano">Ano de lançamento:</label>
+        <input id="ano" name="ano">
+        </br>
+        <label for="genero">Genero:</label>
+        <input id="genero" name="genero">
+        </br>
+        <input type="submit" value="Cadastrar">
+    </form>
 </body>
 </html>
