--- a/src/main/resources/templates/filmes/formulario.html
+++ b/src/main/resources/templates/filmes/formulario.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{template.html}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de Filmes</title>
 </head>
 <body>
-    <h1>Cadastro de Filmes</h1>
-    <form method="post" action="/filmes">
-        <label for="nome">Nome:</label>
-        <input id="nome" name="nome">
-        </br>   
-        <label for="duracao">Duração (em minutos):</label>
-        <input id="duracao" name="duracao">
-        </br>   
-        <label for="ano">Ano de lançamento:</label>
-        <input id="ano" name="ano">
-        </br>
-        <label for="genero">Genero:</label>
-        <input id="genero" name="genero">
-        </br>
-        <input type="submit" value="Cadastrar">
-    </form>
+    <div layout:fragment="conteudo"></div>
+        <h1>Cadastro de Filmes</h1>
+        <form method="post" action="/filmes">
+            <label for="nome">Nome:</label>
+            <input id="nome" name="nome">
+            </br>   
+            <label for="duracao">Duração (em minutos):</label>
+            <input id="duracao" name="duracao">
+            </br>   
+            <label for="ano">Ano de lançamento:</label>
+            <input id="ano" name="ano">
+            </br>
+            <label for="genero">Genero:</label>
+            <input id="genero" name="genero">
+            </br>
+            <input type="submit" value="Cadastrar">
+        </form>
+    </div>
 </body>
 </html>
