--- a/src/main/resources/templates/filmes/listagem.html
+++ b/src/main/resources/templates/filmes/listagem.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org"
+    xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{template.html}">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de filmes</title>
 </head>
 <body>
-    <h1>Lista de Filmes</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>NOME</th>
-                <th>DURAÇÃO</th>
-                <th>ANO DE LANÇAMENTO</th>
-                <th>GÊNERO</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="filme : ${lista}">
-                <td th:text="${filme.nome}"></td>
-                <td th:text="${filme.duracaoEmMinutos}"></td>
-                <td th:text="${filme.anoLancamento}"></td>
-                <td th:text="${filme.genero}"></td>
-            </tr>
-        </tbody>
-    </table>
+    <div layout:fragment="conteudo">
+        <h1>Lista de Filmes</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>NOME</th>
+                    <th>DURAÇÃO</th>
+                    <th>ANO DE LANÇAMENTO</th>
+                    <th>GÊNERO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr th:each="filme : ${lista}">
+                    <td th:text="${filme.nome}"></td>
+                    <td th:text="${filme.duracaoEmMinutos}"></td>
+                    <td th:text="${filme.anoLancamento}"></td>
+                    <td th:text="${filme.genero}"></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
