--- a/src/main/resources/templates/filmes/formulario.html
+++ b/src/main/resources/templates/filmes/formulario.html
@@ -6,21 +6,25 @@
     <title>Cadastro de Filmes</title>
 </head>
 <body>
-    <div layout:fragment="conteudo"></div>
+    <div layout:fragment="conteudo">
         <h1>Cadastro de Filmes</h1>
         <form method="post" action="/filmes">
-            <label for="nome">Nome:</label>
-            <input id="nome" name="nome">
-            </br>   
-            <label for="duracao">Duração (em minutos):</label>
-            <input id="duracao" name="duracao">
-            </br>   
-            <label for="ano">Ano de lançamento:</label>
-            <input id="ano" name="ano">
-            </br>
-            <label for="genero">Genero:</label>
-            <input id="genero" name="genero">
-            </br>
+            <div>
+                <label for="nome">Nome:</label>
+                <input id="nome" name="nome">
+            </div>
+            <div>
+                <label for="duracao">Duração (em minutos):</label>
+                <input id="duracao" name="duracao">
+            </div>
+            <div>
+                <label for="ano">Ano de lançamento:</label>
+                <input id="ano" name="ano">
+            </div>
+            <div>
+                <label for="genero">Gênero:</label>
+                <input id="genero" name="genero">
+            </div>
             <input type="submit" value="Cadastrar">
         </form>
     </div>
