--- a/src/main/resources/templates/filmes/listagem.html
+++ b/src/main/resources/templates/filmes/listagem.html
@@ -8,6 +8,7 @@
 <body>
     <div layout:fragment="conteudo">
         <h1>Lista de Filmes</h1>
+        <a href="/filmes/formulario">Novo</a>
         <table>
             <thead>
                 <tr>
