SPRING - Botão para exclusão

--- a/src/main/resources/templates/filmes/listagem.html
+++ b/src/main/resources/templates/filmes/listagem.html
@@ -16,6 +16,7 @@
                     <th>DURAÇÃO</th>
                     <th>ANO DE LANÇAMENTO</th>
                     <th>GÊNERO</th>
+                    <th>AÇÃO</th>
                 </tr>
             </thead>
             <tbody>
@@ -24,6 +25,12 @@
                     <td th:text="${filme.duracaoEmMinutos}"></td>
                     <td th:text="${filme.anoLancamento}"></td>
                     <td th:text="${filme.genero}"></td>
+                    <td>
+                        <form action="/filmes" method="post">
+                            <input type="hidden" name="_method" value="delete">
+                            <input type="submit" value="EXCLUIR">
+                        </form>
+                    </td>
                 </tr>
             </tbody>
         </table>
