--- a/src/main/resources/templates/filmes/listagem.html
+++ b/src/main/resources/templates/filmes/listagem.html
@@ -28,6 +28,7 @@
                     <td>
                         <form action="/filmes" method="post">
                             <input type="hidden" name="_method" value="delete">
+                            <input type="hidden" name="id" th:value="${filme.id}">
                             <input type="submit" value="EXCLUIR">
                         </form>
                     </td>
