--- a/src/main/resources/templates/filmes/formulario.html
+++ b/src/main/resources/templates/filmes/formulario.html
@@ -9,6 +9,8 @@
     <div layout:fragment="conteudo">
         <h1>Cadastro de Filmes</h1>
         <form method="post" action="/filmes">
+            <input type="hidden" name="_method" value="put">
+            <input type="hidden" name="id" th:value="${filme.id}">
             <div>
                 <label for="nome">Nome:</label>
                 <input id="nome" name="nome" th:value="${filme.nome}">
